<resources>
    <string name="app_name">RobotControler</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="robot_ip">Robot ip</string>
    <string name="start_control">Start control</string>
    <string name="joystick_text">Джойстик</string>
    <string name="text_info">Вывод</string>
    <string name="point_cloud_text">Облако точек</string>
    <string name="port">port</string>
    <string name="name">name</string>
    <string name="create">Создать</string>
    <string name="include_on_layout">Разместить на экране</string>
</resources>