<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lay"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:focusable="true"
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary_dark"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="30dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/black"/>

        <EditText
            android:id="@+id/name_obj"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/material_on_primary_disabled"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/port"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:inputType="numberDecimal"
            android:textColorHint="@color/material_on_primary_disabled"
            android:textColor="@color/white"/>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rel_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:visibility="gone"
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/create"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_on_layout"/>
            <CheckBox
                android:id="@+id/cheak_edit"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp">
                <TextView
                    android:id="@+id/joystick_text"
                    android:textSize="18dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/joystick_text"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    />
                <TextView
                    android:id="@+id/show_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"/>
                <TextView
                    android:id="@+id/pointCloud_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/point_cloud_text"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>